--- a/business-front-page/business-front-page.html
+++ b/business-front-page/business-front-page.html
@@ -63,7 +63,7 @@
       <li class="facebook-icon"><a href="[placeholder link]">Facebook Page</a></li>
       <li class="twitter-icon"><a href="[placeholder link]">Twitter Page</li>
       <li class="phone-icon"><a href="[placeholder link]">Phone Number</a></li>
-      <!--<li class="ebay-icon"><a href="[placeholder link]">Ebay Page</a></li>-->
+      <li class="ebay-icon"><a href="[placeholder link]">Ebay Page</a></li>
       <!--<li class="etsy-icon"><a href="[placeholder link]">Etsy Page</a></li>-->
       <!--<li class="github-icon"><a href="[placeholder link]">GitHub Repo</a></li>-->
     </ul>
